'My edit on this code'

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,10 +60,10 @@ section header p{
     border-radius: 30px;
     transition: 0.3s;
 }
-/* section header p:hover{
+section header p:hover{
     color: white;
     background: #71a7c7;
-} */
+}
 
 .circle{
     position:absolute;
@@ -136,7 +136,7 @@ section .background_image img{
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid_gap: 15px;
+    grid-gap: 15px;
 }
 
 .clothes_box .clothes_card{
@@ -176,7 +176,7 @@ section .background_image img{
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid_gap: 15px;
+    grid-gap: 15px;
 }
 
 .Mugs_box .Mugs_card{
@@ -232,7 +232,7 @@ ul{
 }
 
 .footer_cal h4{
-    font_size: 18px;
+    font-size: 18px;
     color: white ;
     text-transform: capitalize;
     margin-bottom: 30px;
